# C_and_Cpp_exercises

stl/: CMakeLists.txt  final.cpp  proekt1.cpp  vezbi1.cpp  vezbi10.cpp  vezbi11.cpp  vezbi2.cpp  vezbi3.cpp  vezbi4.cpp  vezbi5.cpp  vezbi6.cpp  vezbi7.cpp  vezbi8.cpp  vezbi9.cpp
vezbi/: CMakeLists.txt  datoteki1.c  datoteki2.c  main.c  proekt1.c  proekt2.c  proekt3.c  proekt4.c  vezhbi01.c  vezhbi03.c  vezhbi04.c  vezhbi05.c  vezhbi06.c  vezhbi07.c  vezhbi08.c  vezhbi11.c  vezhbi12.c  vezhbi13.c  vezhbi13_2.c  zadaci.c
vezhbi_cpp/: CMakeLists.txt  klasi.cpp  klasi2.cpp  klasi3.cpp  nasleduvanje.cpp  nasleduvanje2.cpp  nasleduvanje3.cpp  operatori.cpp  operatori2.cpp  operatori3.cpp  polimorfizam.cpp  proekt2.cpp  vezbi1.cpp  vezbi6.cpp
